welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:17: error: not found: value k
      ecritMessage(k)
                   ^ZigZag:19: error: not found: value k
      k=k+1
      ^ZigZag:23: error: not found: value k
  ecritMessage(k) 
               ^