welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
  var k = 0
  var x=0
  var y = 0
  while (k!=48){
    setPos(x,y+1);y=y+1;setPos(x,y+1);y=y+1;setPos(x,y+1);y=y+1
    setPos(x,y+1);y=y+1;setPos(x,y+1);y=y+1;setPos(x,y+1);y=y+1
    setPos(x+1,y);x=x+1;setPos(x,y-1);y=y-1;setPos(x,y-1);y=y-1
    setPos(x,y-1);y=y-1;setPos(x,y-1);y=y-1;setPos(x,y-1);y=y-1
    setPos(x,y-1);y=y-1;setPos(x,y-1);y=y-1;setPos(x+1,y);x=x+1
  }
}


for(j<-0 to 6){
    for(i<-0 to 6){
      if(!(i==0&&j==0)){
      ecritMessage(k)
      setPos(i,j)
      k=k+1
      }
    }
  }
  ecritMessage(k)